# AttributionsWiki

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
attributions_wiki/: app.py  auth.py  db.py  exceptions.py
attributions_wiki/routers/api/: attribution_router.py  belief_router.py  factor_router.py  user_router.py
attributions_wiki/routers/views/: views.py
attributions_wiki/services/: attribution_service.py  auth.py  belief_service.py  factor_service.py  user_service.py
prisma/: schema.prisma
prisma/migrations/20231122182239_demo_wednesdays_november_22nd_2023/: migration.sql
prisma/migrations/20231201034136_init/: migration.sql
prisma/migrations/20231208032702_remove_author/: migration.sql
prisma/migrations/20231220181552_relate_attribution_and_belief_many_to_many/: migration.sql
prisma/migrations/20231220183123_factor_relationship_with_attribution_and_belief/: migration.sql
static/templates/: Home.html  belief_card.html  belief_list.html  login.html  register.html
tests/: conftest.py  test_factor.py
